2003-04-09  Jp Calderone <exarkun@twistedmatrix.com>
	* twisted/internet/base.py: Change the sort order of DelayedCalls
	and remove them from the end of the list instead of the beginning.
	This changes O(n) complexity to O(1) complexity.

2003-04-09  Brian Warner  <warner@lothar.com>

	* twisted/test/test_jelly.py, test_newjelly: Test cleanup.
	Parameterize the jelly module used by the tests, make test_jelly a
	subclass of test_newjelly using a different jelly module: tests
	should now be unified. Also change tests to use proper trial
	self.failUnless() methods instead of bare assert().

2003-04-09  Bob Ippolito  <bob@redivi.com>

	* twisted/python/util.py (OrderedDict): added a UserDict subclass
	that preserves insert order (for __repr__, items, values, keys).

	* twisted/internet/app.py (Application, _AbstractServiceCollection):
	Preserve service order, start services in order, stop them in reverse.

2003-04-09  Andrew Bennetts  <spiv@twistedmatrix.com>

	* twisted/protocols/ftp.py (FTPClient):
	Added STOR support to FTPClient, as well as support for using
	Producers or Consumers instead of Protocols for uploading/downloading.
	* twisted/protocols/policies.py (TimeoutWrapper):
	Added a timeout policy that can be used to automatically disconnect
	inactive connections.

2003-04-07  Brian Warner  <warner@lothar.com>

	* twisted/test/test_banana.py (BananaTestCase): add Acapnotic's
	crash-cBanana test case, and some others.

	* twisted/spread/banana.py (Pynana.dataReceived): add 640k limit on
	lists/tuples, parameterize the limit into banana.SIZE_LIMIT, define
	and use BananaError on all problems. Impose 640k limit on outbound
	lists/tuples/strings to catch problems on transmit side too.

	* twisted/spread/cBanana.c (cBanana_dataReceived): check malloc()
	return values to avoid segfault from oversized lists. Impose 640k
	limit on length of incoming lists. Raise BananaError on these
	checks instead of the previously-unreachable
	cBanana.'cBanana.error' exception.
